2010-07-01  gettextize  <bug-gnu-gettext@gnu.org>

	* m4/codeset.m4: New file, from gettext-0.18.
	* m4/fcntl-o.m4: New file, from gettext-0.18.
	* m4/glibc2.m4: New file, from gettext-0.18.
	* m4/glibc21.m4: New file, from gettext-0.18.
	* m4/intdiv0.m4: New file, from gettext-0.18.
	* m4/intl.m4: New file, from gettext-0.18.
	* m4/intldir.m4: New file, from gettext-0.18.
	* m4/intlmacosx.m4: New file, from gettext-0.18.
	* m4/intmax.m4: New file, from gettext-0.18.
	* m4/inttypes_h.m4: New file, from gettext-0.18.
	* m4/inttypes-pri.m4: New file, from gettext-0.18.
	* m4/lcmessage.m4: New file, from gettext-0.18.
	* m4/lock.m4: New file, from gettext-0.18.
	* m4/longlong.m4: New file, from gettext-0.18.
	* m4/printf-posix.m4: New file, from gettext-0.18.
	* m4/size_max.m4: New file, from gettext-0.18.
	* m4/stdint_h.m4: New file, from gettext-0.18.
	* m4/threadlib.m4: New file, from gettext-0.18.
	* m4/uintmax_t.m4: New file, from gettext-0.18.
	* m4/visibility.m4: New file, from gettext-0.18.
	* m4/wchar_t.m4: New file, from gettext-0.18.
	* m4/wint_t.m4: New file, from gettext-0.18.
	* m4/xsize.m4: New file, from gettext-0.18.
	* Makefile.am (SUBDIRS): Add intl.
	* configure.ac (AC_CONFIG_FILES): Add intl/Makefile.

2010-06-29  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): New variable.
	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in.

2010-06-29  gettextize  <bug-gnu-gettext@gnu.org>

	* m4/gettext.m4: New file, from gettext-0.18.
	* m4/iconv.m4: New file, from gettext-0.18.
	* m4/lib-ld.m4: New file, from gettext-0.18.
	* m4/lib-link.m4: New file, from gettext-0.18.
	* m4/lib-prefix.m4: New file, from gettext-0.18.
	* m4/nls.m4: New file, from gettext-0.18.
	* m4/po.m4: New file, from gettext-0.18.
	* m4/progtest.m4: New file, from gettext-0.18.
	* Makefile.am (EXTRA_DIST): New variable.
	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in.
